MOSIP-45325: move code from release-1.5.x to develop
Squashed rebuild of PR #988 onto a fresh develop base, with all
CodeRabbit and CodeQL findings from that PR's review addressed.

Security fixes:
- Fix a Zip Slip vulnerability: ZipUtils.unzip built the extraction
  path directly from zipEntry.getName() (attacker-controlled, from
  inside the zip's central directory) with no traversal check, letting
  a crafted pre-registration/packet zip write files outside
  targetDirectory. Resolve each entry against a normalized target root
  and reject entries that resolve outside it.
- Fix an arbitrary file read: personaFilePath (and its many aliases)
  from ~17 REST request-body call sites flowed through
  ResidentModel.readPersona -> PersonaParseCache.readPersona ->
  CommonUtil.read with zero path validation, letting a caller read any
  file on the host as a "persona". Added CommonUtil.validateReadablePath
  (reusing the existing findMatchingAllowedRoot/isPathUnderRoot temp-root
  logic already used by validateOutputPath) and wired it into
  PersonaParseCache.readPersona, the single chokepoint all of those
  call sites funnel through.
- Move OTP and UIN/RID out of REST URLs (query/path) into request
  bodies: preRegController's OTP-verify endpoint, PersonaController's
  updateResidentData, ResidentController's downloadCard.
- Validate all resolved addresses (not just the first) against
  loopback/link-local/site-local/multicast in CommandsService's SSRF
  guard for the targetBaseUrl override.
- Guard PacketMakerService.createPacket's packet root, the 5 raw
  contextKey path-segment usages across packPacket/packContainer, and
  the public zipAndEncrypt(Path, String)'s zipSrcFolder parameter
  against traversal: reject regId/type/contextKey outright if they
  fall outside their expected format before any path is built from
  them, and validate zipSrcFolder itself rather than trusting callers
  to have done so.
- CommandsService.storeFile: strip path separators from the uploa